<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@font/poppins">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- AppBar -->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:elevation="4dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:navigationIcon="@drawable/back_button"
                app:title="Detail Event"
                app:titleTextColor="?attr/colorOnPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <!-- Konten -->
        <ScrollView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/img_event_cover"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image_event"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/foreground_image_black_opacity" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tv_event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/name_event"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_event_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_event"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="?attr/colorOnBackground" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:text="@string/dot"
                        android:textColor="?attr/colorOnBackground" />

                    <TextView
                        android:id="@+id/tv_event_owner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_owner"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:textColor="?attr/colorOnBackground" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_event_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/event_city"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnBackground" />

                <TextView
                    android:id="@+id/tv_event_quota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/event_quota"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnBackground" />

                <TextView
                    android:id="@+id/tv_event_registered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/event_registered"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnBackground" />

                <TextView
                    android:id="@+id/tv_event_beginTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/event_begin_time"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnBackground" />

                <TextView
                    android:id="@+id/tv_event_endTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/event_end_time"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnBackground" />

                <TextView
                    android:id="@+id/tv_event_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="4dp"
                    android:autoLink="web"
                    android:fontFamily="@font/roboto"
                    android:text="@string/event_visit"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/blue_main"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_event_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/event_summary"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/event_description"
                    android:textColor="?attr/colorOnBackground" />

                <!-- Tombol Register -->
                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="16dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:text="@string/button_register"
                    android:textColor="?attr/colorOnPrimary" />
            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
