<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUpcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins"
            android:text="@string/tvUpcoming" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUpcomingEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:orientation="horizontal"
            tools:listitem="@layout/item_row_event_horizontal" />

        <TextView
            android:id="@+id/tv_home_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_upcoming"
            android:fontFamily="@font/poppins"
            android:textSize="24sp"
            android:visibility="gone"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvFinished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins"
            android:text="@string/tvFinished" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFinishedEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            tools:listitem="@layout/item_row_event" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>